--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_COLOR_DIAGNOSTICS TRUE)
 
 add_library(hehe
-    src/hehe.cpp
-    src/socket.cpp
+    src/tcp_connection.cpp
+    src/tcp_listen.cpp
+    src/tcp_stream.cpp
 )
 target_include_directories(hehe PUBLIC include)
 
