Add basic HTTP requests and responses; just headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_COLOR_DIAGNOSTICS TRUE)
 
 add_library(hehe
+    src/http.cpp
     src/io.cpp
     src/tcp_connection.cpp
     src/tcp_listen.cpp
     src/tcp_stream.cpp
     src/tcp_streambuf.cpp
+    src/url.cpp
 )
 target_include_directories(hehe PUBLIC include)
 
