--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(chatter-tcp-server)
+add_subdirectory(http-client)
 add_subdirectory(silent-tcp-server)
 add_subdirectory(tcp-client)
