--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(chatter-tcp-server)
+add_subdirectory(decode)
 add_subdirectory(http-client)
 add_subdirectory(silent-tcp-server)
 add_subdirectory(tcp-client)
