--- a/tools/chatter-tcp-server/CMakeLists.txt
+++ b/tools/chatter-tcp-server/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(chatter-tcp-server
     main.cpp
 )
-target_link_libraries(chatter-tcp-server PRIVATE hehe)
+target_link_libraries(chatter-tcp-server PRIVATE ne)
