--- a/tools/http-client/CMakeLists.txt
+++ b/tools/http-client/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(http-client
     main.cpp
 )
-target_link_libraries(http-client PRIVATE hehe)
+target_link_libraries(http-client PRIVATE ne)
