--- a/tools/tcp-client/CMakeLists.txt
+++ b/tools/tcp-client/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(tcp-client
     main.cpp
 )
-target_link_libraries(tcp-client PRIVATE hehe)
+target_link_libraries(tcp-client PRIVATE ne)
