--- a/tools/silent-tcp-server/CMakeLists.txt
+++ b/tools/silent-tcp-server/CMakeLists.txt
@@ -1,4 +1,4 @@
 add_executable(silent-tcp-server
     main.cpp
 )
-target_link_libraries(silent-tcp-server PRIVATE hehe)
+target_link_libraries(silent-tcp-server PRIVATE ne)
