Implement SHA-1 encoding

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library(ne
     src/http.cpp
     src/io.cpp
     src/metainfo.cpp
+    src/sha.cpp
     src/tcp_connection.cpp
     src/tcp_listen.cpp
     src/tcp_stream.cpp
