--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,7 +1,8 @@
+add_subdirectory(bdecode)
 add_subdirectory(chatter-tcp-server)
-add_subdirectory(decode)
 add_subdirectory(decode-metainfo)
 add_subdirectory(http-client)
 add_subdirectory(sha1)
 add_subdirectory(silent-tcp-server)
 add_subdirectory(tcp-client)
+add_subdirectory(touch-tracker)
